--- a/ComeniusCarrousel/Decaan/Leraar/LeraarToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Leraar/LeraarToevoegen.cshtml
@@ -43,47 +43,17 @@
         
         if(Validation.IsValid())
         {
-            var db = Database.Open(App.AuthDataBase);
-            var db2 = Database.Open(App.DataBase);
-            var user = db.QuerySingle("SELECT UserName FROM UserProfile WHERE LOWER(UserName) = LOWER(@0)", userName);
-            if(user == null)
-            {
-                db.Execute("INSERT INTO UserProfile (UserName) VALUES (LOWER(@0))", userName);
-                
-                try
-                {
-                    var token = WebSecurity.CreateAccount(userName, password, false);
-                    var dataId = db.QuerySingle("SELECT UserId FROM UserProfile WHERE LOWER(UserName) = LOWER(@0)", userName);
-                    db2.Execute("INSERT INTO Gebruiker (Voornaam, Achternaam, UserId) VALUES (@0,@1,@2)",voornaam, achternaam, dataId.UserId);
-                    db2.Execute("INSERT INTO Leraar (VoorlichtingVak, UserId) VALUES (@0,@1)", vak, dataId.UserId);
-                    Roles.AddUserToRole(userName, "Leraar");
-                    db.Close();
-                    db2.Close();
-                    Response.Redirect("~/Decaan/Leraar/LeraarOverzicht");
-                }
-                catch(System.Web.Security.MembershipCreateUserException e)
-                {
-                    db.Close();
-                    db2.Close();
-                    ModelState.AddFormError(e.Message);
-                }
-            }
-            else
-            {
-                ModelState.AddFormError("Gebruiker bestaat al");
-            }
-            db.Close();
-            db2.Close();
+            LeraarRepo.MakeLeraar(userName, password, voornaam, achternaam, vak);
         }
     }
 }
-
-<h2>Nieuwe leraar aanmaken</h2>
 
 <div class="col-md-12">
     <form method="post">
         @AntiForgery.GetHtml()
         @Html.ValidationSummary("Account creatie is mislukt, verhelp de fouten en probeer het opnieuw.", excludeFieldErrors: true, htmlAttributes: null)
+        <fieldset>
+            <h2>Register a new account</h2>
             <div class="form-group">
                 <label for="userName">Email adres</label>
                 <input type="text" id="userName" name="userName" value="@userName" class="form-control">
@@ -109,9 +79,9 @@
                 <input type="password" id="confirmPassword" name="confirmPassword" value="@confirmPassword" class="form-control">
                 @Html.ValidationMessage("confirmPassword")
             </div>
-            <div class="form-group">
+            <div>
             <label>Selecteer te geven vak</label>
-            <select name="vak" class="form-control">
+            <select name="vak">
                 <option value="-"></option>
                 @foreach(VakRepo.Vak v in vakken) // maakt een keuzemenu met alle mogelijke vakken
                 {
@@ -119,9 +89,9 @@
                 }
             </select>
             </div>
-            
-            <div class="from-group" id="floatRight">
-                <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span>&nbsp; Toevoegen</button>
+            <div class="from-group">
+                <button type="submit" class="btn btn-default">Toevoegen</button>
             </div>
+        </fieldset>
     </form>
 </div>
