--- a/ComeniusCarrousel/App_Code/LeerlingRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/LeerlingRepo.cshtml
@@ -186,4 +186,50 @@
         db.Close();
         userDb.Close();
     }
+
+    public static void MakeLeerling(string mail, string wachtwoord, string voornaam, string achternaam, int klasId, string niveau, int leerlingnummer, string instroomleerling, string vak, int i = -1)
+    {
+        var db = Database.Open(App.AuthDataBase);
+        var db2 = Database.Open(App.DataBase);
+        var user = db.QuerySingle("SELECT UserName FROM UserProfile WHERE LOWER(UserName) = LOWER(@0)", mail);
+        if(user == null)
+        {
+            db.Execute("INSERT INTO UserProfile (UserName) VALUES (LOWER(@0))", mail);
+                
+            try
+            {
+                var token = WebSecurity.CreateAccount(mail, wachtwoord, false);
+                var dataId = db.QuerySingle("SELECT UserId FROM UserProfile WHERE LOWER(UserName) = LOWER(@0)", mail);
+                db2.Execute("INSERT INTO Gebruiker (Voornaam, Achternaam, UserId) VALUES (@0,@1,@2)",voornaam, achternaam, dataId.UserId);
+                db2.Execute("INSERT INTO Leerling (UserId, KlasId, Niveau, Leerlingnummer, InstroomLeerling, TalentstroomVak, Aangemeld ) VALUES (@0,@1,@2,@3,@4,@5,@6)",dataId.UserId, klasId, niveau.ToUpper(), leerlingnummer, instroomleerling, vak, "False");
+                Roles.AddUserToRole(mail, "Leerling");
+                if (niveau.ToLower() == "vwo")
+                {
+                    List<VakRepo.Vak> vakken = VakRepo.GetVakken(niveau, vak);
+                    foreach (VakRepo.Vak keuzeVak in vakken)
+                    {
+                        KeuzeRepo.InsertKeuze(dataId.UserId, keuzeVak.VakId, 1);
+                    }
+                }
+                db.Close();
+                db2.Close();
+            }
+            catch(System.Web.Security.MembershipCreateUserException e)
+            {
+                db.Close();
+                db2.Close();
+                ModelState.AddFormError(e.Message);
+            }
+        }
+        else if(i != -1)
+        {
+            ModelState.AddFormError("Gebruiker " + (i+1) + " bestaat al");
+        }
+        else
+        {
+            ModelState.AddFormError("Gebruiker bestaat al");
+        }
+        db.Close();
+        db2.Close();
+    }
 }
